<resources>
    <!-- General -->
    <string name="app_name">My Buddy</string>

    <!-- Shared Preferences -->
    <string name="user_data">com.lohyenjeong.mybuddy.UserData</string>
    <string name="user_email">UserEmail</string>
    <string name="user_password">Password</string>
    <string name="user_mode">Mode</string>
    <string name="user_username">Username</string>

    <!-- All menus -->
    <string name="action_account">Account</string>
    <string name="action_pair">Pair</string>
    <string name="action_caregiver">Caregiver Mode</string>
    <string name="action_personal">Personal Mode</string>
    <string name="action_about">About</string>
    <string name="action_sign_out">Sign out</string>

    <!-- GestureListFragment -->
    <string name="button_start">Start</string>
    <string name="button_stop">Stop</string>


    <!-- About -->
    <string name="text_about">This application aims to help caretakers of people
        with challenging behaviour to monitor any potential signs of challenging behaviour
        even before the behaviour occurs.</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Login and Registration-->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_register">No account yet? Sign up now.</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">Password needs to be at least 6 characters </string>
    <string name="error_missing_password">Please enter your password</string>
    <string name="error_missing_username">Please enter your username</string>
    <string name="error_missing_email">Please enter your email</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email completions."</string>
    <string name="action_sign_up">Sign Up</string>
    <string name="prompt_username">Username</string>
    <string name="action_login">Already have an account? Sign in now.</string>
    <string name="prompt_mode">Select a mode of usage</string>
    <string-array name="selection_mode">
        <item>Caregiver</item>
        <item>Personal Use</item>
    </string-array>


    <!--Pairing-->
    <string name="prompt_pairing">Username of person you want to pair with</string>
    <string name="action_save_pairing">Save Pairing</string>
    <string name="text_current_pairing">Current Pairings</string>
    <string-array name="dummy_pairings">
        <item>user@mybuddy.com</item>
        <item>user2@mybuddy.com</item>
    </string-array>


</resources>
