<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools" tools:context=".MainActivity">


    <item android:id="@+id/action_account"
        android:title="@string/action_account"
        app:showAsAction="never" />

    <item android:id="@+id/action_pair"
        android:title="@string/action_pair"
        app:showAsAction="never" />

    <item android:id="@+id/action_about"
        android:title="@string/action_about"
        android:orderInCategory="100"
        app:showAsAction="never" />

    <item android:id="@+id/action_sign_out"
        android:title="@string/action_sign_out"
        android:orderInCategory="150"
        app:showAsAction="never" />

</menu>