<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/reg_form"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:fitsSystemWindows="true"
    android:gravity="center_horizontal"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.lohyenjeong.mybuddy.SignUpActivity"
    android:orientation="vertical">

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="8dp">

            <AutoCompleteTextView
                android:id="@+id/input_pairing"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/prompt_pairing"
                android:inputType="textEmailAddress"
                android:imeOptions="actionNext"
                android:maxLines="1"
                android:singleLine="true" />

        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/btn_reg_sign_up"
            style="?android:textAppearanceSmall"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="30dp"
            android:text="@string/action_save_pairing"
            android:textStyle="bold"
            android:focusable="true" />

    <TextView
        android:id="@+id/btn_reg_login"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="0dp"
        android:gravity="left"
        android:text="@string/text_current_pairing"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textColor="@color/abc_btn_colored_borderless_text_material" />

    <ListView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/pairing_list"
        android:layout_gravity="center_horizontal"
        android:entries="@array/dummy_pairings" />



</LinearLayout>
